# VSmt

./: .gitignore  README.md  TODOs.org  project.org
Notes/: PaperNotes.org  ReadingList.org  design.org
haskell/vsmt/: .dir-locals.el  CHANGELOG.md  cabal.project.local  default.nix  release.nix  sbv-git.nix  sbv.nix  shell.nix  unordered-containers.nix  vsmt.cabal  vsmt.nix
haskell/vsmt/Data/: Api.hs  Config.hs  Settings.hs  Solve.hs  Utils.hs  VCore.hs  VSMT.hs
haskell/vsmt/Data/Core/: Core.hs  Pretty.hs  Result.hs  Types.hs  Utils.hs
haskell/vsmt/Data/Parser/: Result.hs  SMTLIB2.hs  Z3.hs
haskell/vsmt/VSMTBench/: VSMTBench.hs
haskell/vsmt/VSMTBench/Automotive/: Auto.hs  Lang.hs  Main.hs
haskell/vsmt/VSMTBench/AutomotiveSMT/: Auto.hs  Main.hs  Parser.hs
haskell/vsmt/VSMTBench/Bench/: Core.hs
haskell/vsmt/VSMTBench/BusyBox/: BruteForce.hs  BusyBox.hs  Incremental.hs  Main.hs  Parser.hs
haskell/vsmt/VSMTBench/Financial/: Main.hs
haskell/vsmt/VSMTBench/FinancialSMT/: Financial.hs  Main.hs  Parser.hs
haskell/vsmt/VSMTBench/Linux/: Financial.hs  Main.hs
haskell/vsmt/VSMTBench/Solvers/: Main.hs
haskell/vsmt/VSMTBench/Utils/: VSMTBenchFramework.hs
haskell/vsmt/VSMTTestSuite/: VSMTTest.hs
haskell/vsmt/VSMTTestSuite/GoldFiles/: Boolean_soundness.gold  Choices test.gold  DeepChoices_LHS.gold  MemoryBlowUp.gold  Single_Choice_With_VC.gold  Single_Choice_With_Vars.gold  Singleton_Choice.gold  Singleton_Choice_LHS.gold  Singleton_Choice_RHS.gold  Tree_of_Choices.gold  TwoChoices_LHS.gold  TwoChoices_RHS.gold  Two_Choices.gold  Two_Choices_With_VC.gold  conjunctions_force_True.gold  edgeCase.gold  infinite.gold  infinite2.gold  parserTest1.gold  simple_arithmetic_to_core.gold  simple_arithmetic_to_variable.gold  soundness.gold  two_variables_in_addition.gold
haskell/vsmt/VSMTTestSuite/TestSuite/Core/Parser/: Result.hs
haskell/vsmt/VSMTTestSuite/TestSuite/Solve/: Arith.hs  Choices.hs  Plain.hs  Sound.hs
haskell/vsmt/VSMTTestSuite/TestSuite/Solve/Arithmetic/: Choices.hs  Plain.hs
haskell/vsmt/VSMTTestSuite/TestSuite/Solve/Boolean/: Choices.hs  Plain.hs
haskell/vsmt/VSMTTestSuite/TestSuite/Solve/Laws/: Arithmetic.hs  Boolean.hs
haskell/vsmt/VSMTTestSuite/Utils/: VSMTGen.hs  VSMTTestFramework.hs
haskell/vsmt/munged_data/: auto.csv  auto_diagnostics.csv  financial.csv  financial_diagnostics.csv  financial_smt.csv
haskell/vsmt/nix/: default.nix
haskell/vsmt/raw_data/: auto.csv  auto_diagnostics.csv  financial.csv  financial_diagnostics.csv  financial_smt.csv  financial_smt_raw.csv
haskell/vsmt/statistics/: parseRaw.jl  plotting.R  rq1.R  rq1_plots_smt.R
