cabal-version: >=1.10
Name:          vsmt
Version:       0.0.1
Category:      Formal Methods, Theorem Provers, Bit vectors, Symbolic Computation, Math, SMT, Variational Programming
Synopsis:      SMT Based Verification with first class variational programming capabilities
Description:   Efficiently solve SMT problems in the context of variation.
               For details, please see: TODO: create website
Copyright:     Jeffrey Young, 2016-2020
License:       BSD3
License-file:  LICENSE
Stability:     Experimental
Author:        Jeffrey Young
Homepage:      https://github.com/doyougnu/VSmt
Bug-reports:   https://github.com/doyougnu/VSmt/issues
Maintainer:    Jeffrey Young (youngjef@oregonstate.edu)
Build-Type:    Simple
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md

library
  exposed-modules: Data.VSMT
                 , Data.Core.Core
                 , Data.Core.Types
                 , Data.Core.Result
  build-depends: base >=4.12 && <4.13
               , bifunctors
               , containers >= 0.6.0.1
               , deepseq
               , mtl
               , sbv >= 8.6
               , text
               , unordered-containers
  default-language: Haskell2010
  other-extensions: BangPatterns
                    CPP
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveAnyClass
                    DeriveDataTypeable
                    DeriveFunctor
                    DeriveGeneric
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    GADTs
                    GeneralizedNewtypeDeriving
                    ImplicitParams
                    InstanceSigs
                    KindSignatures
                    LambdaCase
                    MultiParamTypeClasses
                    NamedFieldPuns
                    OverloadedLists
                    OverloadedStrings
                    PatternGuards
                    QuasiQuotes
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
                    TypeFamilies
                    TypeOperators
                    TypeSynonymInstances
                    UndecidableInstances
                    ViewPatterns
                    DerivingVia

Test-Suite VSMTTest
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -Wall -O2
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  Build-depends : base >= 4.11, vsmt, tasty, tasty-golden, tasty-hunit, tasty-quickcheck, QuickCheck
  Hs-Source-Dirs  : VSMTTestSuite
  main-is         : VSMTTest.hs
  -- Other-modules   : Utils.VSMTTestFramework

Benchmark VSMTBench
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -with-rtsopts=-K64m -O2
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  Build-depends : base >= 4.11
                  , vsmt
                  , gauge
                  , deepseq
                  , silently
  Hs-Source-Dirs  : SBVBenchSuite
  main-is         : SBVBench.hs
  -- Other-modules   : Utils.SBVBenchFramework
  --                 , BenchSuite.Bench.Bench