cabal-version: 2.2

Name:          vsmt
Version:       0.0.1
Category:      Formal Methods, Theorem Provers, Bit vectors, Symbolic Computation, Math, SMT, Variational Programming
Synopsis:      SMT Based Verification with first class variational programming capabilities
Description:   Efficiently solve SMT problems in the context of variation.
               For details, please see: TODO: create website
Copyright:     Jeffrey Young, 2016-2020
License:       BSD-3-Clause
License-file:  LICENSE
Stability:     Experimental
Author:        Jeffrey Young
Homepage:      https://github.com/doyougnu/VSmt
Bug-reports:   https://github.com/doyougnu/VSmt/issues
Maintainer:    Jeffrey Young (youngjef@oregonstate.edu)
Build-Type:    Simple
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md


common common-settings
   default-language: Haskell2010
   ghc-options     : -Wall -O2
   build-depends   : base >= 4.14 && < 5

   if impl(ghc >= 8.10.1)
      ghc-options  : -Wunused-packages


library
  exposed-modules: Data.Core.Core
                 , Data.Core.Types
                 , Data.Core.Result
                 , Data.Core.Pretty
                 , Data.Parser.Result
                 , Data.Solve
                 , Data.Settings
  build-depends: base
               , bifunctors
               , containers >= 0.6.0.1
               , deepseq
               , hashable
               , megaparsec
               , monad-logger
               , mtl
               , parser-combinators
               , sbv >= 8.8
               , text
               , transformers >= 0.5.6.2
               , unordered-containers >= 0.2.13
               , unagi-chan
               , async
  default-language: Haskell2010
  other-extensions: BangPatterns
                    CPP
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveAnyClass
                    DeriveDataTypeable
                    DeriveFunctor
                    DeriveGeneric
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    GADTs
                    GeneralizedNewtypeDeriving
                    ImplicitParams
                    InstanceSigs
                    KindSignatures
                    LambdaCase
                    MultiParamTypeClasses
                    NamedFieldPuns
                    OverloadedLists
                    OverloadedStrings
                    PatternGuards
                    QuasiQuotes
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
                    TypeFamilies
                    TypeOperators
                    TypeSynonymInstances
                    UndecidableInstances
                    ViewPatterns

Test-Suite VSMTTest
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -Wall -O2 -threaded
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  Build-depends : base >= 4.11
                  , vsmt
                  , tasty
                  , tasty-golden
                  , tasty-quickcheck
                  , QuickCheck
                  , tasty-hspec
                  , tasty-hunit
                  , filepath
                  , bytestring

                  , unordered-containers
                  , sbv
                  , text
                  , containers
  Hs-Source-Dirs  : VSMTTestSuite
  main-is         : VSMTTest.hs
  Other-modules   : Utils.VSMTTestFramework
                  , Utils.VSMTGen
                  , TestSuite.Solve.Boolean.Plain
                  , TestSuite.Solve.Boolean.Choices
                  , TestSuite.Solve.Arithmetic.Plain
                  , TestSuite.Solve.Arithmetic.Choices
                  , TestSuite.Solve.Sound
                  , TestSuite.Core.Parser.Result

Benchmark VSMTBench
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2
  -- ghc-options     : -O2 "-with-rtsopts=-p -s -hm -L800 "
  -- ghc-options     : -Wall -O2 -threaded "-with-rtsopts=-qg"
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  Build-depends : base >= 4.11
                  , vsmt
                  , gauge
                  , deepseq
                  , megaparsec
                  , parser-combinators
                  , text
                  , sbv
                  , containers
  Hs-Source-Dirs  : VSMTBench
  main-is         : VSMTBench.hs
  Other-modules   : BusyBox.Parser
-- Utils.SBVBenchFramework
--                   , BenchSuite.Bench.Bench