cabal-version: 2.2

Name:          vsmt
Version:       0.0.1
Category:      Formal Methods, Theorem Provers, Bit vectors, Symbolic Computation, Math, SMT, Variational Programming
Synopsis:      SMT Based Verification with first class variational programming capabilities
Description:   Efficiently solve SMT problems in the context of variation.
               For details, please see: TODO: create website
Copyright:     Jeffrey Young, 2016-2020
License:       BSD-3-Clause
License-file:  LICENSE
Stability:     Experimental
Author:        Jeffrey Young
Homepage:      https://github.com/doyougnu/VSmt
Bug-reports:   https://github.com/doyougnu/VSmt/issues
Maintainer:    Jeffrey Young (youngjef@oregonstate.edu)
Build-Type:    Simple
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md


common common-settings
   default-language: Haskell2010
   ghc-options     : -Wall -O2 -threaded
   build-depends   : base >= 4.14 && < 5

   if impl(ghc >= 8.10.1)
      ghc-options  : -Wunused-packages


library
  exposed-modules: Core.Core
                 , Core.Types
                 , Core.Result
                 , Core.Pretty
                 , Parser.Result
                 , Solve
                 , Settings
                 , Utils
  other-modules: Paths_vsmt
  hs-source-dirs:  Data
  build-depends: async
               , base
               , bifunctors
               , containers >= 0.6.0.1
               , deepseq
               , hashable
               , megaparsec
               , monad-logger
               , mtl
               , parser-combinators
               , sbv
               , stm
               , text
               , transformers >= 0.5.6.2
               , unordered-containers >= 0.2.13
               , unagi-chan
  default-language: Haskell2010
  other-extensions: BangPatterns
                    CPP
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveAnyClass
                    DeriveDataTypeable
                    DeriveFunctor
                    DeriveGeneric
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    GADTs
                    GeneralizedNewtypeDeriving
                    ImplicitParams
                    InstanceSigs
                    KindSignatures
                    LambdaCase
                    MultiParamTypeClasses
                    NamedFieldPuns
                    OverloadedLists
                    OverloadedStrings
                    PatternGuards
                    QuasiQuotes
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
                    TypeFamilies
                    TypeOperators
                    TypeSynonymInstances
                    UndecidableInstances
                    ViewPatterns

Test-Suite VSMTTest
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -Wall -O2 -threaded
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  Build-depends : base >= 4.11
                  , bytestring
                  , containers
                  , filepath
                  , hashable
                  , tasty
                  , tasty-golden
                  , tasty-quickcheck
                  , tasty-hspec
                  , tasty-hunit
                  , text
                  , QuickCheck
                  , sbv
                  , unordered-containers
                  , vsmt
  Hs-Source-Dirs  : VSMTTestSuite
  main-is         : VSMTTest.hs
  Other-modules   : Utils.VSMTTestFramework
                  , Utils.VSMTGen
                  , TestSuite.Solve.Boolean.Plain
                  , TestSuite.Solve.Boolean.Choices
                  , TestSuite.Solve.Arithmetic.Plain
                  , TestSuite.Solve.Arithmetic.Choices
                  , TestSuite.Solve.Sound
                  , TestSuite.Core.Parser.Result

-- Benchmark VSMTBench
--   type            : exitcode-stdio-1.0
--   default-language: Haskell2010
--   ghc-options     : -O2 -threaded "-with-rtsopts=-qg"
--   other-extensions: DataKinds
--                     DeriveAnyClass
--                     DeriveDataTypeable
--                     FlexibleContexts
--                     GeneralizedNewtypeDeriving
--                     OverloadedLists
--                     OverloadedStrings
--                     Rank2Types
--                     RankNTypes
--                     ScopedTypeVariables
--                     StandaloneDeriving
--                     TemplateHaskell
--                     TupleSections
--                     TypeApplications
--   build-depends: base >= 4.11
--                , containers
--                , deepseq
--                , directory
--                , gauge
--                , hashable
--                , megaparsec
--                , parser-combinators
--                , text
--                , sbv
--                , unordered-containers
--   hs-source-dirs: VSMTBench
--   main-is: VSMTBench.hs
--   other-modules: Utils.VSMTBenchFramework
--                , Core.Types
--                , Core.Result
--                , Core.Core
--                , Core.Pretty


benchmark busybox
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded "-with-rtsopts=-qg"
  other-extensions: DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  build-depends: base >= 4.11
               , containers
               , deepseq
               , directory
               , gauge
               , hashable
               , megaparsec
               , parser-combinators
               , text
               , sbv
               , vsmt
  hs-source-dirs: VSMTBench
                , VSMTBench/Bench
                , VSMTBench/BusyBox
  main-is:       Main.hs
  Other-modules: Utils.VSMTBenchFramework
               , Parser
               , BruteForce
               , Incremental
               , BusyBox


benchmark financial
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded -rtsopts
  other-extensions: BangPatterns
                    DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  build-depends: aeson
               , base >= 4.11
               , bytestring
               , containers
               , deepseq
               , directory
               , gauge
               , hashable
               , megaparsec
               , mtl
               , parser-combinators
               , text
               , sbv
               , vsmt
  hs-source-dirs: VSMTBench
                , VSMTBench/Financial
  main-is:       Main.hs
  Other-modules: Utils.VSMTBenchFramework
               , Bench.Core
               , Lang
               , Parser
               , Financial

benchmark auto
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded -rtsopts
  other-extensions: BangPatterns
                    DataKinds
                    DeriveAnyClass
                    DeriveDataTypeable
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    OverloadedLists
                    OverloadedStrings
                    Rank2Types
                    RankNTypes
                    ScopedTypeVariables
                    StandaloneDeriving
                    TemplateHaskell
                    TupleSections
                    TypeApplications
  build-depends: aeson
               , base >= 4.11
               , bytestring
               , containers
               , deepseq
               , directory
               , gauge
               , hashable
               , megaparsec
               , mtl
               , parser-combinators
               , text
               , sbv
               , vsmt
  hs-source-dirs: VSMTBench/
                  , VSMTBench/Automotive
  main-is:       Main.hs
  Other-modules: Utils.VSMTBenchFramework
                 , Auto
                 , Parser
                 , Lang
                 , Bench.Core